kcms/keys: Make deleting a command shortcut delete the corresponding .desktop file

BUG: 475056